@@ -15,32 +15,38 @@ package org.openmetadata.service.jdbi3;
 
 import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
 import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
+import static org.openmetadata.schema.type.EventType.ENTITY_DELETED;
+import static org.openmetadata.schema.type.EventType.ENTITY_NO_CHANGE;
+import static org.openmetadata.schema.type.EventType.POST_UPDATED;
+import static org.openmetadata.schema.type.EventType.TASK_CLOSED;
+import static org.openmetadata.schema.type.EventType.TASK_RESOLVED;
+import static org.openmetadata.schema.type.EventType.THREAD_UPDATED;
 import static org.openmetadata.schema.type.Include.ALL;
 import static org.openmetadata.schema.type.Include.NON_DELETED;
 import static org.openmetadata.schema.type.Relationship.ADDRESSED_TO;
 import static org.openmetadata.schema.type.Relationship.CREATED;
 import static org.openmetadata.schema.type.Relationship.IS_ABOUT;
+import static org.openmetadata.schema.type.Relationship.MENTIONED_IN;
 import static org.openmetadata.schema.type.Relationship.REPLIED_TO;
 import static org.openmetadata.schema.type.TaskStatus.Open;
+import static org.openmetadata.service.Entity.GLOSSARY;
+import static org.openmetadata.service.Entity.GLOSSARY_TERM;
 import static org.openmetadata.service.Entity.USER;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.ANNOUNCEMENT_INVALID_START_TIME;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.ANNOUNCEMENT_OVERLAP;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.entityNotFound;
 import static org.openmetadata.service.jdbi3.UserRepository.TEAMS_FIELD;
 import static org.openmetadata.service.util.EntityUtil.compareEntityReference;
-import static org.openmetadata.service.util.RestUtil.DELETED_TEAM_DISPLAY;
-import static org.openmetadata.service.util.RestUtil.DELETED_TEAM_NAME;
-import static org.openmetadata.service.util.RestUtil.DELETED_USER_DISPLAY;
-import static org.openmetadata.service.util.RestUtil.DELETED_USER_NAME;
 
 import io.jsonwebtoken.lang.Collections;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import javax.json.JsonPatch;
 import javax.ws.rs.core.Response.Status;
@@ -55,7 +61,6 @@ import org.jdbi.v3.sqlobject.transaction.Transaction;
 import org.json.JSONObject;
 import org.openmetadata.schema.EntityInterface;
 import org.openmetadata.schema.api.feed.CloseTask;
-import org.openmetadata.schema.api.feed.EntityLinkThreadCount;
 import org.openmetadata.schema.api.feed.ResolveTask;
 import org.openmetadata.schema.api.feed.ThreadCount;
 import org.openmetadata.schema.entity.feed.Thread;
@@ -64,6 +69,7 @@ import org.openmetadata.schema.type.ChangeEvent;
 import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.EventType;
 import org.openmetadata.schema.type.Include;
+import org.openmetadata.schema.type.MetadataOperation;
 import org.openmetadata.schema.type.Post;
 import org.openmetadata.schema.type.Reaction;
 import org.openmetadata.schema.type.Relationship;
@@ -85,10 +91,12 @@ import org.openmetadata.service.resources.feeds.FeedUtil;
 import org.openmetadata.service.resources.feeds.MessageParser;
 import org.openmetadata.service.resources.feeds.MessageParser.EntityLink;
 import org.openmetadata.service.security.AuthorizationException;
+import org.openmetadata.service.security.Authorizer;
+import org.openmetadata.service.security.policyevaluator.OperationContext;
+import org.openmetadata.service.security.policyevaluator.ResourceContext;
 import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.FullyQualifiedName;
 import org.openmetadata.service.util.JsonUtils;
-import org.openmetadata.service.util.RestUtil;
 import org.openmetadata.service.util.RestUtil.DeleteResponse;
 import org.openmetadata.service.util.RestUtil.PatchResponse;
 import org.openmetadata.service.util.ResultList;
@@ -105,6 +113,12 @@ import org.openmetadata.service.util.ResultList;
 @Slf4j
 @Repository
 public class FeedRepository {
+  public static final String DELETED_USER_NAME = "DeletedUser";
+  public static final String DELETED_USER_DISPLAY = "User was deleted";
+  public static final String DELETED_TEAM_NAME = "DeletedTeam";
+  public static final String DELETED_TEAM_DISPLAY = "Team was deleted";
+  private static final long MAX_SECONDS_TIMESTAMP = 2147483647L;
+
   private final CollectionDAO dao;
   private static final MessageDecorator<FeedMessage> FEED_MESSAGE_FORMATTER =
       new FeedMessageDecorator();
@@ -134,11 +148,12 @@ public class FeedRepository {
     return dao.feedDAO().getTaskId();
   }
 
+  @Getter
   public static class ThreadContext {
-    @Getter protected final Thread thread;
-    @Getter @Setter protected EntityLink about;
-    @Getter @Setter protected EntityInterface aboutEntity;
-    @Getter private final EntityReference createdBy;
+    protected final Thread thread;
+    @Setter protected EntityLink about;
+    @Setter protected EntityInterface aboutEntity;
+    private final EntityReference createdBy;
 
     ThreadContext(Thread thread) {
       this.thread = thread;
@@ -146,13 +161,13 @@ public class FeedRepository {
       this.aboutEntity = Entity.getEntity(about, getFields(), ALL);
       this.createdBy =
           Entity.getEntityReferenceByName(Entity.USER, thread.getCreatedBy(), NON_DELETED);
-      thread.withEntityId(aboutEntity.getId()); // Add entity id to thread
+      thread.withEntityRef(aboutEntity.getEntityReference()); // Add entity id to thread
     }
 
     ThreadContext(Thread thread, ChangeEvent event) {
       this.thread = thread;
       this.about = EntityLink.parse(thread.getAbout());
-      if (event.getEventType().equals(EventType.ENTITY_DELETED)) {
+      if (event.getEventType().equals(ENTITY_DELETED)) {
         String json = (String) event.getEntity();
         this.aboutEntity =
             JsonUtils.readValue(json, Entity.getEntityClassFromType(event.getEntityType()));
@@ -161,7 +176,7 @@ public class FeedRepository {
       }
       this.createdBy =
           Entity.getEntityReferenceByName(Entity.USER, thread.getCreatedBy(), NON_DELETED);
-      thread.withEntityId(aboutEntity.getId()); // Add entity id to thread
+      thread.withEntityRef(aboutEntity.getEntityReference()); // Add entity id to thread
     }
 
     public TaskWorkflow getTaskWorkflow() {
@@ -176,8 +191,8 @@ public class FeedRepository {
     private String getFields() {
       EntityRepository<?> repository = getEntityRepository();
       List<String> fieldList = new ArrayList<>();
-      if (repository.supportsOwner) {
-        fieldList.add("owner");
+      if (repository.supportsOwners) {
+        fieldList.add("owners");
       }
       if (repository.supportsTags) {
         fieldList.add("tags");
@@ -260,15 +275,17 @@ public class FeedRepository {
 
     // Add the owner also as addressedTo as the entity he owns when addressed, the owner is
     // actually being addressed
-    EntityReference entityOwner = threadContext.getAboutEntity().getOwner();
-    if (entityOwner != null) {
-      dao.relationshipDAO()
-          .insert(
-              thread.getId(),
-              entityOwner.getId(),
-              Entity.THREAD,
-              entityOwner.getType(),
-              ADDRESSED_TO.ordinal());
+    List<EntityReference> entityOwners = threadContext.getAboutEntity().getOwners();
+    if (!nullOrEmpty(entityOwners)) {
+      for (EntityReference entityOwner : entityOwners) {
+        dao.relationshipDAO()
+            .insert(
+                thread.getId(),
+                entityOwner.getId(),
+                Entity.THREAD,
+                entityOwner.getType(),
+                ADDRESSED_TO.ordinal());
+      }
     }
 
     // Add mentions to field relationship table
@@ -329,7 +346,7 @@ public class FeedRepository {
     // Update the attributes
     closeTask(thread, user, closeTask);
     Thread updatedHref = FeedResource.addHref(uriInfo, thread);
-    return new PatchResponse<>(Status.OK, updatedHref, RestUtil.ENTITY_UPDATED);
+    return new PatchResponse<>(Status.OK, updatedHref, TASK_CLOSED);
   }
 
   public PatchResponse<Thread> resolveTask(
@@ -338,7 +355,7 @@ public class FeedRepository {
     ThreadContext threadContext = getThreadContext(thread);
     resolveTask(threadContext, user, resolveTask);
     Thread updatedHref = FeedResource.addHref(uriInfo, thread);
-    return new PatchResponse<>(Status.OK, updatedHref, RestUtil.ENTITY_UPDATED);
+    return new PatchResponse<>(Status.OK, updatedHref, TASK_RESOLVED);
   }
 
   protected void resolveTask(ThreadContext threadContext, String user, ResolveTask resolveTask) {
@@ -398,6 +415,20 @@ public class FeedRepository {
     }
     TaskWorkflow workflow = threadContext.getTaskWorkflow();
     workflow.closeTask(user, closeTask);
+    task.withStatus(TaskStatus.Closed).withClosedBy(user).withClosedAt(System.currentTimeMillis());
+    thread.withTask(task).withUpdatedBy(user).withUpdatedAt(System.currentTimeMillis());
+
+    dao.feedDAO().update(thread.getId(), JsonUtils.pojoToJson(thread));
+    addClosingPost(thread, user, closeTask.getComment());
+    sortPosts(thread);
+  }
+
+  @Transaction
+  public void closeTaskWithoutWorkflow(Thread thread, String user, CloseTask closeTask) {
+    TaskDetails task = thread.getTask();
+    if (task.getStatus() != Open) {
+      return;
+    }
     task.withStatus(TaskStatus.Closed).withClosedBy(user).withClosedAt(System.currentTimeMillis());
     thread.withTask(task).withUpdatedBy(user).withUpdatedAt(System.currentTimeMillis());
 
@@ -470,8 +501,7 @@ public class FeedRepository {
   public DeleteResponse<Post> deletePost(Thread thread, Post post, String userName) {
     List<Post> posts = thread.getPosts();
     // Remove the post to be deleted from the posts list
-    posts =
-        posts.stream().filter(p -> !p.getId().equals(post.getId())).collect(Collectors.toList());
+    posts = posts.stream().filter(p -> !p.getId().equals(post.getId())).toList();
     thread
         .withUpdatedAt(System.currentTimeMillis())
         .withUpdatedBy(userName)
@@ -479,14 +509,14 @@ public class FeedRepository {
         .withPostsCount(posts.size());
     // update the json document
     dao.feedDAO().update(thread.getId(), JsonUtils.pojoToJson(thread));
-    return new DeleteResponse<>(post, RestUtil.ENTITY_DELETED);
+    return new DeleteResponse<>(post, ENTITY_DELETED);
   }
 
   @Transaction
   public DeleteResponse<Thread> deleteThread(Thread thread, String deletedByUser) {
     deleteThreadInternal(thread.getId());
-    LOG.info("{} deleted thread with id {}", deletedByUser, thread.getId());
-    return new DeleteResponse<>(thread, RestUtil.ENTITY_DELETED);
+    LOG.debug("{} deleted thread with id {}", deletedByUser, thread.getId());
+    return new DeleteResponse<>(thread, ENTITY_DELETED);
   }
 
   @Transaction
@@ -513,57 +543,115 @@ public class FeedRepository {
     }
   }
 
-  public ThreadCount getThreadsCount(FeedFilter filter, String link) {
+  public List<ThreadCount> getThreadsCount(String link) {
     List<List<String>> result;
-    if (link == null) {
-      // Get thread count of all entities
-      result =
-          // TODO fix this
-          dao.feedDAO()
-              .listCountByEntityLink(
-                  null,
-                  Entity.THREAD,
-                  null,
-                  IS_ABOUT.ordinal(),
-                  filter.getThreadType(),
-                  filter.getTaskStatus(),
-                  filter.getResolved());
-    } else {
-      EntityLink entityLink = EntityLink.parse(link);
-      EntityReference reference = EntityUtil.validateEntityLink(entityLink);
-      if (reference.getType().equals(USER) || reference.getType().equals(Entity.TEAM)) {
-        if (reference.getType().equals(USER)) {
-          UUID userId = reference.getId();
-          List<String> teamIds = getTeamIds(userId);
-          result = dao.feedDAO().listCountByOwner(userId, teamIds, filter.getCondition());
-        } else {
-          // team is not supported
-          result = new ArrayList<>();
-        }
-      } else {
+    EntityLink entityLink = EntityLink.parse(link);
+    List<ThreadCount> threadCounts = new ArrayList<>();
+    EntityReference reference = EntityUtil.validateEntityLink(entityLink);
+    int mentions;
+    if (reference.getType().equals(USER) || reference.getType().equals(Entity.TEAM)) {
+      if (reference.getType().equals(USER)) {
+        UUID userId = reference.getId();
+        User user = Entity.getEntity(USER, userId, TEAMS_FIELD, ALL);
+        List<String> teamIds = getTeamIds(user);
+        List<String> teamNames = getTeamNames(user);
+        String userTeamJsonMysql = getUserTeamJsonMysql(userId, teamIds);
+        String userTeamJsonPostgres = getUserTeamJsonPostgres(userId, teamIds);
         result =
             dao.feedDAO()
-                .listCountByEntityLink(
-                    entityLink.getFullyQualifiedFieldValue(),
-                    Entity.THREAD,
-                    entityLink.getFullyQualifiedFieldType(),
-                    IS_ABOUT.ordinal(),
-                    filter.getThreadType(),
-                    filter.getTaskStatus(),
-                    filter.getResolved());
+                .listCountByOwner(
+                    userId, teamIds, user.getName(), userTeamJsonMysql, userTeamJsonPostgres);
+        mentions =
+            dao.feedDAO()
+                .listCountThreadsByMentions(
+                    FullyQualifiedName.buildHash(user.getFullyQualifiedName()),
+                    teamNames,
+                    Relationship.MENTIONED_IN.ordinal(),
+                    " where true ");
+      } else {
+        mentions = 0;
+        // team is not supported
+        result = new ArrayList<>();
       }
-    }
+      ThreadCount threadCount = new ThreadCount().withMentionCount(mentions);
+      threadCount.setEntityLink(link);
+      result.forEach(
+          l -> {
+            String type = l.get(0);
+            String taskStatus = l.get(1);
+            int count = Integer.parseInt(l.get(2));
+            if (type.equalsIgnoreCase("Conversation")) {
+              threadCount.setConversationCount(count);
+            } else if (type.equalsIgnoreCase("Task")) {
+              if (taskStatus.equals("Open")) {
+                threadCount.setOpenTaskCount(count);
+              } else if (taskStatus.equals("Closed")) {
+                threadCount.setClosedTaskCount(count);
+              }
+            }
+          });
+      computeTotalTaskCount(threadCount);
+      threadCounts.add(threadCount);
+    } else if (reference.getType().equals(GLOSSARY)) {
+      mentions = 0;
+      result = dao.feedDAO().listCountThreadsByGlossaryAndTerms(entityLink, reference);
+      result.forEach(
+          l -> {
+            ThreadCount threadCount = new ThreadCount().withMentionCount(mentions);
+            String eLink = l.get(0);
+            String type = l.get(1);
+            String taskStatus = l.get(2);
+            threadCount.setEntityLink(eLink);
+            int count = Integer.parseInt(l.get(3));
+            if (type.equalsIgnoreCase("Conversation")) {
+              threadCount.setConversationCount(count);
+            } else if (type.equalsIgnoreCase("Task")) {
+              if (taskStatus.equals("Open")) {
+                threadCount.setOpenTaskCount(count);
+              } else if (taskStatus.equals("Closed")) {
+                threadCount.setClosedTaskCount(count);
+              }
+            }
+            computeTotalTaskCount(threadCount);
+            threadCounts.add(threadCount);
+          });
 
-    AtomicInteger totalCount = new AtomicInteger(0);
-    List<EntityLinkThreadCount> entityLinkThreadCounts = new ArrayList<>();
-    result.forEach(
-        l -> {
-          int count = Integer.parseInt(l.get(1));
-          entityLinkThreadCounts.add(
-              new EntityLinkThreadCount().withEntityLink(l.get(0)).withCount(count));
-          totalCount.addAndGet(count);
-        });
-    return new ThreadCount().withTotalCount(totalCount.get()).withCounts(entityLinkThreadCounts);
+    } else {
+      mentions = 0;
+      result =
+          dao.feedDAO()
+              .listCountByEntityLink(
+                  reference.getId(),
+                  reference.getFullyQualifiedName(),
+                  entityLink.getFullyQualifiedFieldType());
+      result.forEach(
+          l -> {
+            ThreadCount threadCount = new ThreadCount().withMentionCount(mentions);
+            String eLink = l.get(0);
+            String type = l.get(1);
+            String taskStatus = l.get(2);
+            threadCount.setEntityLink(eLink);
+            int count = Integer.parseInt(l.get(3));
+            if (type.equalsIgnoreCase("Conversation")) {
+              threadCount.setConversationCount(count);
+            } else if (type.equalsIgnoreCase("Task")) {
+              if (taskStatus.equals("Open")) {
+                threadCount.setOpenTaskCount(count);
+              } else if (taskStatus.equals("Closed")) {
+                threadCount.setClosedTaskCount(count);
+              }
+            }
+            computeTotalTaskCount(threadCount);
+            threadCounts.add(threadCount);
+          });
+    }
+    return threadCounts;
+  }
+
+  private void computeTotalTaskCount(ThreadCount threadCount) {
+    threadCount.setTotalTaskCount(
+        (threadCount.getOpenTaskCount() != null ? threadCount.getOpenTaskCount() : 0)
+            + (threadCount.getClosedTaskCount() != null ? threadCount.getClosedTaskCount() : 0));
   }
 
   public List<Post> listPosts(UUID threadId) {
@@ -593,10 +681,16 @@ public class FeedRepository {
           FilteredThreads filteredThreads = getThreadsByOwner(filter, reference.getId(), limit + 1);
           threads = filteredThreads.threads();
           total = filteredThreads.totalCount();
+        } else if (reference.getType().equals(GLOSSARY)
+            && ThreadType.Task.equals(filter.getThreadType())) {
+          // Get tasks associated with the glossary term and glossary at glossary level
+          FilteredThreads filteredThreads =
+              getThreadsForGlossary(filter, userId, limit + 1, entityLink);
+          threads = filteredThreads.threads();
+          total = filteredThreads.totalCount();
         } else {
           // Only data assets are added as about
-          User user =
-              userId != null ? Entity.getEntity(USER, userId, TEAMS_FIELD, NON_DELETED) : null;
+          User user = userId != null ? Entity.getEntity(USER, userId, TEAMS_FIELD, ALL) : null;
           List<String> teamNameHash = getTeamNames(user);
           String userName = user == null ? null : user.getFullyQualifiedName();
           List<String> jsons =
@@ -703,8 +797,7 @@ public class FeedRepository {
     }
 
     sortPosts(thread);
-    String change =
-        patchUpdate(thread, post, updated) ? RestUtil.ENTITY_UPDATED : RestUtil.ENTITY_NO_CHANGE;
+    EventType change = patchUpdate(thread, post, updated) ? POST_UPDATED : ENTITY_NO_CHANGE;
     return new PatchResponse<>(Status.OK, updated, change);
   }
 
@@ -725,7 +818,7 @@ public class FeedRepository {
 
     restorePatchAttributes(original, updated);
 
-    if (!updated.getReactions().isEmpty()) {
+    if (!nullOrEmpty(updated.getReactions())) {
       populateUserReactions(updated.getReactions());
       updated
           .getReactions()
@@ -735,6 +828,7 @@ public class FeedRepository {
     if (updated.getTask() != null) {
       populateAssignees(updated);
       updated.getTask().getAssignees().sort(compareEntityReference);
+      validateAssignee(updated);
     }
 
     if (updated.getAnnouncement() != null) {
@@ -742,19 +836,19 @@ public class FeedRepository {
     }
 
     // Update the attributes
-    String change =
-        patchUpdate(original, updated) ? RestUtil.ENTITY_UPDATED : RestUtil.ENTITY_NO_CHANGE;
+    EventType change = patchUpdate(original, updated) ? THREAD_UPDATED : ENTITY_NO_CHANGE;
     sortPosts(updated);
     Thread updatedHref = FeedResource.addHref(uriInfo, updated);
     return new PatchResponse<>(Status.OK, updatedHref, change);
   }
 
   public void checkPermissionsForResolveTask(
-      Thread thread, boolean closeTask, SecurityContext securityContext) {
+      Authorizer authorizer, Thread thread, boolean closeTask, SecurityContext securityContext) {
     String userName = securityContext.getUserPrincipal().getName();
     User user = Entity.getEntityByName(USER, userName, TEAMS_FIELD, NON_DELETED);
     EntityLink about = EntityLink.parse(thread.getAbout());
     EntityReference aboutRef = EntityUtil.validateEntityLink(about);
+    ThreadContext threadContext = getThreadContext(thread);
     if (Boolean.TRUE.equals(user.getIsAdmin())) {
       return; // Allow admin resolve/close task
     }
@@ -762,11 +856,29 @@ public class FeedRepository {
     // Allow if user is an assignee of the resolve/close task
     // Allow if user is the owner of the resource for which task is created to resolve/close task
     // Allow if user created the task to close task (and not resolve task)
-    EntityReference owner = Entity.getOwner(aboutRef);
+    List<EntityReference> owners = Entity.getOwners(aboutRef);
     List<EntityReference> assignees = thread.getTask().getAssignees();
-    if (assignees.stream().anyMatch(assignee -> assignee.getName().equals(userName))
-        || owner.getName().equals(userName)
-        || closeTask && thread.getCreatedBy().equals(userName)) {
+    if (!nullOrEmpty(owners)
+        && (owners.stream().anyMatch(owner -> owner.getName().equals(userName))
+            || closeTask && thread.getCreatedBy().equals(userName))) {
+      return;
+    }
+
+    // Allow if user is an assignee of the task and if the assignee has permissions to update the
+    // entity
+    if (assignees.stream().anyMatch(assignee -> assignee.getName().equals(userName))) {
+      // If entity does not exist, this is a create operation, else update operation
+      ResourceContext resourceContext =
+          new ResourceContext<>(aboutRef.getType(), aboutRef.getId(), null);
+      if (EntityUtil.isDescriptionTask(threadContext.getTaskWorkflow().getTaskType())) {
+        OperationContext operationContext =
+            new OperationContext(aboutRef.getType(), MetadataOperation.EDIT_DESCRIPTION);
+        authorizer.authorize(securityContext, operationContext, resourceContext);
+      } else if (EntityUtil.isTagTask(threadContext.getTaskWorkflow().getTaskType())) {
+        OperationContext operationContext =
+            new OperationContext(aboutRef.getType(), MetadataOperation.EDIT_TAGS);
+        authorizer.authorize(securityContext, operationContext, resourceContext);
+      }
       return;
     }
 
@@ -775,7 +887,8 @@ public class FeedRepository {
     List<EntityReference> teams = user.getTeams();
     List<String> teamNames = teams.stream().map(EntityReference::getName).toList();
     if (assignees.stream().anyMatch(assignee -> teamNames.contains(assignee.getName()))
-        || teamNames.contains(owner.getName())) {
+        || teamNames.stream()
+            .anyMatch(team -> owners.stream().anyMatch(owner -> team.equals(owner.getName())))) {
       return;
     }
 
@@ -791,18 +904,52 @@ public class FeedRepository {
     if (startTime >= endTime) {
       throw new IllegalArgumentException(ANNOUNCEMENT_INVALID_START_TIME);
     }
+
+    // Converts start and end times to milliseconds if they are in seconds.
+    if (startTime <= MAX_SECONDS_TIMESTAMP && endTime <= MAX_SECONDS_TIMESTAMP) {
+      convertStartAndEndTimeToMilliseconds(thread);
+    }
+
     // TODO fix this - overlapping announcements should be allowed
     List<String> announcements =
         dao.feedDAO()
-            .listAnnouncementBetween(thread.getId(), thread.getEntityId(), startTime, endTime);
+            .listAnnouncementBetween(
+                thread.getId(), thread.getEntityRef().getId(), startTime, endTime);
     if (!announcements.isEmpty()) {
       // There is already an announcement that overlaps the new one
       throw new IllegalArgumentException(ANNOUNCEMENT_OVERLAP);
     }
   }
 
+  private static void convertStartAndEndTimeToMilliseconds(Thread thread) {
+    Optional.ofNullable(thread.getAnnouncement())
+        .ifPresent(
+            announcement -> {
+              Optional.ofNullable(announcement.getStartTime())
+                  .ifPresent(
+                      startTime ->
+                          announcement.setStartTime(convertSecondsToMilliseconds(startTime)));
+              Optional.ofNullable(announcement.getEndTime())
+                  .ifPresent(
+                      endTime -> announcement.setEndTime(convertSecondsToMilliseconds(endTime)));
+            });
+  }
+
+  private static long convertSecondsToMilliseconds(long seconds) {
+    return LocalDateTime.ofEpochSecond(seconds, 0, ZoneOffset.UTC)
+        .toInstant(ZoneOffset.UTC)
+        .toEpochMilli();
+  }
+
   private void validateAssignee(Thread thread) {
     if (thread != null && ThreadType.Task.equals(thread.getType())) {
+      String createdByUserName = thread.getCreatedBy();
+      User createdByUser =
+          Entity.getEntityByName(USER, createdByUserName, TEAMS_FIELD, NON_DELETED);
+      if (Boolean.TRUE.equals(createdByUser.getIsBot())) {
+        throw new IllegalArgumentException("Task cannot be created by bot only by user or teams");
+      }
+
       List<EntityReference> assignees = thread.getTask().getAssignees();
 
       // Assignees can only be user or teams
@@ -878,15 +1025,17 @@ public class FeedRepository {
   }
 
   private boolean fieldsChanged(Thread original, Thread updated) {
-    // Patch supports isResolved, message, task assignees, reactions, and announcements for now
+    // Patch supports isResolved, message, task assignees, reactions, announcements and AI for now
     return !original.getResolved().equals(updated.getResolved())
         || !original.getMessage().equals(updated.getMessage())
         || (Collections.isEmpty(original.getReactions())
             && !Collections.isEmpty(updated.getReactions()))
         || (!Collections.isEmpty(original.getReactions())
             && Collections.isEmpty(updated.getReactions()))
-        || original.getReactions().size() != updated.getReactions().size()
-        || !original.getReactions().containsAll(updated.getReactions())
+        || (original.getReactions() != null
+            && updated.getReactions() != null
+            && (original.getReactions().size() != updated.getReactions().size()
+                || !original.getReactions().containsAll(updated.getReactions())))
         || (original.getAnnouncement() != null
             && (!original
                     .getAnnouncement()
@@ -898,6 +1047,10 @@ public class FeedRepository {
                 || !Objects.equals(
                     original.getAnnouncement().getEndTime(),
                     updated.getAnnouncement().getEndTime())))
+        || (original.getChatbot() == null && updated.getChatbot() != null)
+        || (original.getChatbot() != null
+            && updated.getChatbot() != null
+            && !original.getChatbot().getQuery().equals(updated.getChatbot().getQuery()))
         || (original.getTask() != null
             && (original.getTask().getAssignees().size() != updated.getTask().getAssignees().size()
                 || !original
@@ -928,23 +1081,20 @@ public class FeedRepository {
   }
 
   private String getUserTeamJsonMysql(UUID userId, List<String> teamIds) {
-    // Build a string like this for the tasks filter
-    // [{"id":"9e78b924-b75c-4141-9845-1b3eb81fdc1b","type":"team"},{"id":"fe21e1ba-ce00-49fa-8b62-3c9a6669a11b","type":"user"}]
     List<String> result = new ArrayList<>();
-    JSONObject json = getUserTeamJson(userId, "user");
-    result.add(json.toString());
-    teamIds.forEach(id -> result.add(getUserTeamJson(id, "team").toString()));
+    result.add("\"" + userId.toString() + "\"");
+    teamIds.forEach(id -> result.add("\"" + id + "\""));
     return result.toString();
   }
 
-  private List<String> getUserTeamJsonPostgres(UUID userId, List<String> teamIds) {
-    // Build a list of objects like this for the tasks filter
-    // [{"id":"9e78b924-b75c-4141-9845-1b3eb81fdc1b","type":"team"}]','[{"id":"fe21e1ba-ce00-49fa-8b62-3c9a6669a11b","type":"user"}]
-    List<String> result = new ArrayList<>();
-    JSONObject json = getUserTeamJson(userId, "user");
-    result.add(List.of(json.toString()).toString());
-    teamIds.forEach(id -> result.add(List.of(getUserTeamJson(id, "team").toString()).toString()));
-    return result;
+  private String getUserTeamJsonPostgres(UUID userId, List<String> teamIds) {
+    StringBuilder result = new StringBuilder();
+    result.append(userId.toString());
+    for (String id : teamIds) {
+      result.append(" | ").append(id);
+    }
+    LOG.info("result {}", result.toString());
+    return result.toString();
   }
 
   private JSONObject getUserTeamJson(UUID userId, String type) {
@@ -958,7 +1108,7 @@ public class FeedRepository {
   /** Return the tasks assigned to the user. */
   private FilteredThreads getTasksAssignedTo(FeedFilter filter, UUID userId, int limit) {
     List<String> teamIds = getTeamIds(userId);
-    List<String> userTeamJsonPostgres = getUserTeamJsonPostgres(userId, teamIds);
+    String userTeamJsonPostgres = getUserTeamJsonPostgres(userId, teamIds);
     String userTeamJsonMysql = getUserTeamJsonMysql(userId, teamIds);
     List<String> jsons =
         dao.feedDAO()
@@ -1003,9 +1153,9 @@ public class FeedRepository {
 
   /** Return the tasks created by or assigned to the user. */
   private FilteredThreads getTasksOfUser(FeedFilter filter, UUID userId, int limit) {
-    String username = Entity.getEntityReferenceById(Entity.USER, userId, NON_DELETED).getName();
+    String username = Entity.getEntityReferenceById(Entity.USER, userId, ALL).getName();
     List<String> teamIds = getTeamIds(userId);
-    List<String> userTeamJsonPostgres = getUserTeamJsonPostgres(userId, teamIds);
+    String userTeamJsonPostgres = getUserTeamJsonPostgres(userId, teamIds);
     String userTeamJsonMysql = getUserTeamJsonMysql(userId, teamIds);
     List<String> jsons =
         dao.feedDAO()
@@ -1021,7 +1171,7 @@ public class FeedRepository {
 
   /** Return the tasks created by the user. */
   private FilteredThreads getTasksAssignedBy(FeedFilter filter, UUID userId, int limit) {
-    String username = Entity.getEntityReferenceById(Entity.USER, userId, NON_DELETED).getName();
+    String username = Entity.getEntityReferenceById(Entity.USER, userId, ALL).getName();
     List<String> jsons = dao.feedDAO().listTasksAssigned(username, limit, filter.getCondition());
     List<Thread> threads = JsonUtils.readObjects(jsons, Thread.class);
     int totalCount = dao.feedDAO().listCountTasksAssignedBy(username, filter.getCondition(false));
@@ -1044,12 +1194,43 @@ public class FeedRepository {
     return new FilteredThreads(threads, totalCount);
   }
 
+  private FilteredThreads getThreadsForGlossary(
+      FeedFilter filter, UUID userId, int limit, EntityLink entityLink) {
+
+    User user = userId != null ? Entity.getEntity(USER, userId, TEAMS_FIELD, ALL) : null;
+    List<String> teamNameHash = getTeamNames(user);
+    String userName = user == null ? null : user.getFullyQualifiedName();
+    int filterRelation = -1;
+    if (userName != null && filter.getFilterType() == FilterType.MENTIONS) {
+      filterRelation = MENTIONED_IN.ordinal();
+    }
+    EntityLink glossaryTermLink =
+        new EntityLink(GLOSSARY_TERM, entityLink.getFullyQualifiedFieldValue());
+
+    List<String> jsons =
+        dao.feedDAO()
+            .listThreadsByGlossaryAndTerms(
+                entityLink.getFullyQualifiedFieldValue(),
+                entityLink.getFullyQualifiedFieldType(),
+                glossaryTermLink.getFullyQualifiedFieldType(),
+                limit + 1,
+                IS_ABOUT.ordinal(),
+                userName,
+                teamNameHash,
+                filterRelation,
+                filter.getCondition());
+
+    List<Thread> threads = JsonUtils.readObjects(jsons, Thread.class);
+
+    return new FilteredThreads(threads, jsons.size());
+  }
+
   /**
    * Returns the threads where the user or the team they belong to were mentioned by other users
    * with @mention.
    */
   private FilteredThreads getThreadsByMentions(FeedFilter filter, UUID userId, int limit) {
-    User user = Entity.getEntity(Entity.USER, userId, TEAMS_FIELD, NON_DELETED);
+    User user = Entity.getEntity(Entity.USER, userId, TEAMS_FIELD, ALL);
     String userNameHash = getUserNameHash(user);
     // Return the threads where the user or team was mentioned
     List<String> teamNamesHash = getTeamNames(user);
@@ -1078,12 +1259,15 @@ public class FeedRepository {
   private List<String> getTeamIds(UUID userId) {
     List<String> teamIds = null;
     if (userId != null) {
-      User user = Entity.getEntity(Entity.USER, userId, TEAMS_FIELD, NON_DELETED);
-      teamIds =
-          listOrEmpty(user.getTeams()).stream()
-              .map(ref -> ref.getId().toString())
-              .collect(Collectors.toList());
+      User user = Entity.getEntity(Entity.USER, userId, TEAMS_FIELD, ALL);
+      teamIds = getTeamIds(user);
     }
+    return nullOrEmpty(teamIds) ? List.of(StringUtils.EMPTY) : teamIds;
+  }
+
+  private List<String> getTeamIds(User user) {
+    List<String> teamIds =
+        listOrEmpty(user.getTeams()).stream().map(ref -> ref.getId().toString()).toList();
     return nullOrEmpty(teamIds) ? List.of(StringUtils.EMPTY) : teamIds;
   }
 
@@ -1119,7 +1303,7 @@ public class FeedRepository {
       teamNames =
           listOrEmpty(user.getTeams()).stream()
               .map(x -> FullyQualifiedName.buildHash(x.getFullyQualifiedName()))
-              .collect(Collectors.toList());
+              .toList();
     }
     return nullOrEmpty(teamNames) ? List.of(StringUtils.EMPTY) : teamNames;
   }
