@@ -3,83 +3,78 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.Set;
 import lombok.SneakyThrows;
 import org.openmetadata.schema.tests.TestCase;
+import org.openmetadata.schema.tests.TestDefinition;
 import org.openmetadata.schema.tests.TestSuite;
 import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.Include;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.SearchIndexUtils;
 import org.openmetadata.service.search.models.SearchSuggest;
-import org.openmetadata.service.util.JsonUtils;
 
-public class TestCaseIndex implements SearchIndex {
-  final TestCase testCase;
+public record TestCaseIndex(TestCase testCase) implements SearchIndex {
+  private static final Set<String> excludeFields = Set.of("changeDescription", "failedRowsSample");
 
-  private static final List<String> excludeFields = List.of("changeDescription");
+  @Override
+  public Object getEntity() {
+    return testCase;
+  }
 
-  public TestCaseIndex(TestCase testCase) {
-    this.testCase = testCase;
+  @Override
+  public void removeNonIndexableFields(Map<String, Object> esDoc) {
+    SearchIndex.super.removeNonIndexableFields(esDoc);
+    List<Map<String, Object>> testSuites = (List<Map<String, Object>>) esDoc.get("testSuites");
+    if (testSuites != null) {
+      for (Map<String, Object> testSuite : testSuites) {
+        SearchIndexUtils.removeNonIndexableFields(testSuite, excludeFields);
+      }
+    }
   }
 
   @SneakyThrows
-  public Map<String, Object> buildESDoc() {
-    List<TestSuite> testSuiteArray = new ArrayList<>();
-    if (testCase.getTestSuites() != null) {
-      for (TestSuite suite : testCase.getTestSuites()) {
-        suite.setChangeDescription(null);
-        testSuiteArray.add(suite);
-      }
-    }
-    testCase.setTestSuites(testSuiteArray);
-    Map<String, Object> doc = JsonUtils.getMap(testCase);
-    SearchIndexUtils.removeNonIndexableFields(doc, excludeFields);
+  public Map<String, Object> buildSearchIndexDocInternal(Map<String, Object> doc) {
+    // Build Index Doc
     List<SearchSuggest> suggest = new ArrayList<>();
+    TestDefinition testDefinition =
+        Entity.getEntity(
+            Entity.TEST_DEFINITION, testCase.getTestDefinition().getId(), "", Include.ALL);
     suggest.add(SearchSuggest.builder().input(testCase.getFullyQualifiedName()).weight(5).build());
     suggest.add(SearchSuggest.builder().input(testCase.getName()).weight(10).build());
     doc.put(
         "fqnParts",
         getFQNParts(
             testCase.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            suggest.stream().map(SearchSuggest::getInput).toList()));
     doc.put("suggest", suggest);
     doc.put("entityType", Entity.TEST_CASE);
-    doc.put("owner", getEntityWithDisplayName(testCase.getOwner()));
+    doc.put("owners", getEntitiesWithDisplayName(testCase.getOwners()));
+    doc.put("tags", testCase.getTags());
+    doc.put("testPlatforms", testDefinition.getTestPlatforms());
+    doc.put("dataQualityDimension", testDefinition.getDataQualityDimension());
+    doc.put("followers", SearchIndexUtils.parseFollowers(testCase.getFollowers()));
+    doc.put("testCaseType", testDefinition.getEntityType());
+    setParentRelationships(doc, testCase);
     return doc;
   }
 
-  public Map<String, Object> buildESDocForCreate() {
+  private void setParentRelationships(Map<String, Object> doc, TestCase testCase) {
+    // denormalize the parent relationships for search
     EntityReference testSuiteEntityReference = testCase.getTestSuite();
-    TestSuite testSuite = getTestSuite(testSuiteEntityReference.getId());
-    List<TestSuite> testSuiteArray = new ArrayList<>();
-    testSuiteArray.add(testSuite);
-    Map<String, Object> doc = JsonUtils.getMap(testCase);
-    SearchIndexUtils.removeNonIndexableFields(doc, excludeFields);
-    doc.put("testSuites", testSuiteArray);
-    return doc;
-  }
-
-  private TestSuite getTestSuite(UUID testSuiteId) {
-    TestSuite testSuite = Entity.getEntity(Entity.TEST_SUITE, testSuiteId, "", Include.ALL);
-    return new TestSuite()
-        .withId(testSuite.getId())
-        .withName(testSuite.getName())
-        .withDisplayName(testSuite.getDisplayName())
-        .withDescription(testSuite.getDescription())
-        .withFullyQualifiedName(testSuite.getFullyQualifiedName())
-        .withDeleted(testSuite.getDeleted())
-        .withHref(testSuite.getHref())
-        .withExecutable(testSuite.getExecutable())
-        .withChangeDescription(null);
+    if (testSuiteEntityReference == null) {
+      return;
+    }
+    TestSuite testSuite = Entity.getEntityOrNull(testSuiteEntityReference, "", Include.ALL);
+    EntityReference entityReference = testSuite.getExecutableEntityReference();
+    TestSuiteIndex.addTestSuiteParentEntityRelations(entityReference, doc);
   }
 
   public static Map<String, Float> getFields() {
     Map<String, Float> fields = SearchIndex.getDefaultFields();
     fields.put("testSuite.fullyQualifiedName", 10.0f);
     fields.put("testSuite.name", 10.0f);
-    fields.put("testSuite.description", 3.0f);
+    fields.put("testSuite.description", 1.0f);
     fields.put("entityLink", 3.0f);
     fields.put("entityFQN", 10.0f);
     return fields;
